--- a/.github/workflows/issue-manager.yml
+++ b/.github/workflows/issue-manager.yml
@@ -9,6 +9,7 @@ on:
       - edited
   issues:
     types:
+      - opened
       - labeled
       - unlabeled
       - assigned
@@ -17,22 +18,44 @@ on:
     types:
       - labeled
       - unlabeled
+      - assigned
+      - unassigned
   workflow_dispatch:
 
 jobs:
   issue-manager:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: tiangolo/issue-manager@0.4.0
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Close stale issues
+        uses: actions/github-script@v5
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          config: >
-            {
-              "waiting": {
-                "delay": 5, # Two weeks in seconds is 1209600
-                "exclude_labels": ["approved"],
-                "exclude_assignees": true,
-                "message": "Closing this issue due to inactivity for two weeks, with no 'approved' label, and no one assigned."
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const TWO_WEEKS = 10;
+            const issues = await github.rest.issues.listForRepo({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              state: 'open',
+              labels: '!approved'
+            });
+            for (const issue of issues.data) {
+              if (!issue.assignees.length) {
+                const lastUpdated = new Date(issue.updated_at).getTime();
+                if (Date.now() - lastUpdated > TWO_WEEKS) {
+                  await github.rest.issues.createComment({
+                    owner: context.repo.owner,
+                    repo: context.repo.repo,
+                    issue_number: issue.number,
+                    body: 'This issue has been automatically closed due to inactivity.'
+                  });
+                  await github.rest.issues.update({
+                    owner: context.repo.owner,
+                    repo: context.repo.repo,
+                    issue_number: issue.number,
+                    state: 'closed'
+                  });
+                }
               }
             }
