--- a/.github/workflows/issue-manager.yml
+++ b/.github/workflows/issue-manager.yml
@@ -21,7 +21,7 @@ jobs:
     steps:
       - uses: tiangolo/issue-manager@0.4.0
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.MY_PERSONAL_ACCESS_TOKEN }}
           config: >
             {
                 "answered": {
