--- a/.github/workflows/issue-manager.yml
+++ b/.github/workflows/issue-manager.yml
@@ -2,7 +2,7 @@ name: Issue Manager
 
 on:
   schedule:
-    - cron: "0 0 * * *" # Runs at 00:00 every day
+    - cron: "0 0 * * *"
   issue_comment:
     types:
       - created
@@ -10,29 +10,37 @@ on:
   issues:
     types:
       - labeled
-      - unlabeled
-      - assigned
-      - unassigned
   pull_request_target:
     types:
       - labeled
-      - unlabeled
   workflow_dispatch:
 
 jobs:
   issue-manager:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
       - uses: tiangolo/issue-manager@0.4.0
         with:
           token: ${{ secrets.MY_PERSONAL_ACCESS_TOKEN }}
           config: >
             {
-              "waiting": {
-                "delay": 5, # Two weeks in seconds is 1209600
-                "exclude_labels": ["approved"],
-                "exclude_assignees": true,
-                "message": "Closing this issue due to inactivity for two weeks, with no 'approved' label, and no one assigned."
-              }
+                "$schema": "https://raw.githubusercontent.com/tiangolo/issue-manager/master/schema.json",
+                "answered": {
+                    "delay": "P3DT12H30M5S",
+                    "message": "It seems the issue was answered, closing this now.",
+                    "remove_label_on_comment": false,
+                    "remove_label_on_close": false
+                },
+                "validated": {
+                    "delay": 1,
+                    "message": "The issue could not be validated after 5 minutes. Closing now.",
+                    "remove_label_on_comment": true,
+                    "remove_label_on_close": false
+                },
+                "waiting": {
+                    "delay": 1,
+                    "message": "Closing after 8 days of waiting for the additional info requested.",
+                    "remove_label_on_comment": true,
+                    "remove_label_on_close": true
+                }
             }
