--- a/.github/workflows/issue-manager.yml
+++ b/.github/workflows/issue-manager.yml
@@ -26,8 +26,8 @@ jobs:
             {
                 "waiting": {
                     "delay": 1,
-                    "message": "Closing after 8 days of waiting for the additional info requested.",
+                    "message": "This issue has been automatically closed due to 14 days of inactivity and lack of the additional information requested. \nPlease feel free to reopen it if you wish to provide further details or require assistance.",
                     "remove_label_on_comment": true,
-                    "remove_label_on_close": true
+                    "remove_label_on_close": false
                 }
             }
