--- a/.github/workflows/issue-manager.yml
+++ b/.github/workflows/issue-manager.yml
@@ -24,8 +24,8 @@ jobs:
           token: ${{ secrets.MY_PERSONAL_ACCESS_TOKEN }}
           config: >
             {
-                "waiting": {
-                    "delay": 1209600,
+                "Closing Soon as Not planning": {
+                    "delay": 1,
                     "message": "This issue has been automatically closed due to 14 days of inactivity and lack of the additional information requested. \nPlease feel free to reopen it if you wish to provide further details or require assistance.",
                     "remove_label_on_comment": true,
                     "remove_label_on_close": false
